--- a/index.html
+++ b/index.html
@@ -118,16 +118,20 @@
           </div>
       </section>
       
-          <img class="mx-auto d-block" src="img/sunset.jpg" style="max-width:1000px">
-      
-      <footer class="footer text-faded text-center py-5">
-          <div class="container">
-              <p class="m-0 small">Copyright &copy; sailingwinsome.com</p>
+      <div class="container">
+          <div class="intro">
+              <img class="img-fluid" src="img/sunset.jpg" alt="">
+              </div>
           </div>
-      </footer>
-      <!-- Bootstrap core JavaScript -->
-      <script src="vendor/jquery/jquery.min.js"></script>
-      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  </body>
+
+              <footer class="footer text-faded text-center py-5">
+                  <div class="container">
+                      <p class="m-0 small">Copyright &copy; sailingwinsome.com</p>
+                  </div>
+              </footer>
+              <!-- Bootstrap core JavaScript -->
+              <script src="vendor/jquery/jquery.min.js"></script>
+              <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+</body>
 
 </html>
