--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!-- Navigation -->
       <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
           <div class="container">
-              <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Winsome Sailing</a>
+              <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Sailing Winsome</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
               </button>
@@ -63,7 +63,7 @@
                   <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/boat.jpg" alt="">
                   <div class="intro-text left-0 text-center bg-faded p-5 rounded">
                       <h2 class="section-heading mb-4">
-                          <span class="section-heading-upper">Winsome Sailing</span>
+                          <span class="section-heading-upper">Sailing Winsome</span>
                           <span class="section-heading-lower">Welcome Aboard</span>
                       </h2>
                       <p class="mb-3">
