--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-      <meta name="keywords" content="Sailing, sailboat charter, sailing charter, sailing lessons, cruise, sail, sailing instruction, captain services, Daytona, Daytona Beach, Daytona Beach sailing, charters, sailboat rental, sailboat charters, Florida, sailing classes, nature cruises, ash scattering, marriage at sea, wedding at sea, dolphins, yachting, Ponce Inlet, Winsome, Pearson Yachts">
-<meta name="description" content="Sailing charters in Daytona on Winsome a classic 36.5 foot sailboat. Cruise the Halifax River/Intracoastal Waterway or the ocean via scenic Ponce Inlet. Take sailing lessons.  Marriages at sea and memorial ash scattering services are offered.">
-
+    <meta name="keywords" content="Sailing, sailboat charter, sailing charter, sailing lessons, cruise, sail, sailing instruction, captain services, Daytona, Daytona Beach, Daytona Beach sailing, charters, sailboat rental, sailboat charters, Florida, sailing classes, nature cruises, ash scattering, marriage at sea, wedding at sea, dolphins, yachting, Ponce Inlet, Winsome, Pearson Yachts">
+    <meta name="description" content="Sailing charters in Daytona on Winsome a classic 36.5 foot sailboat. Cruise the Halifax River/Intracoastal Waterway or the ocean via scenic Ponce Inlet. Take sailing lessons.  Marriages at sea and memorial ash scattering services are offered.">
+    <meta name="google-site-verification" content="i5penMxX6hlT9BwF13lgCUjcu_tLIa0yN8K0ss_xzoI">
     <title>Business Casual - Start Bootstrap Theme</title>
 
     <!-- Bootstrap core CSS -->
@@ -22,7 +22,7 @@
     <!-- Custom styles for this template -->
     <link href="css/business-casual.min.css" rel="stylesheet">
 
-  </head>
+</head>
 
   <body>
       <!--<h1 class="site-heading text-center text-white d-none d-lg-block">
@@ -62,7 +62,7 @@
               <div class="intro">
                   <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/boat.jpg" alt="">
                   <div class="intro-text left-0 text-center bg-faded p-5 rounded">
-                      <h2 class="section-heading mb-4">
+                      <h2 class="section-heading mb-4" style="color:black">
                           <span class="section-heading-upper">Sailing Winsome</span>
                           <span class="section-heading-lower">Welcome Aboard</span>
                       </h2>
