--- a/about.html
+++ b/about.html
@@ -1,38 +1,31 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
-  <head>
-
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
-    <title>Business Casual - Start Bootstrap Theme</title>
-
+    <meta name="description" content="Sailing charters in Daytona on Winsome a classic 36.5 foot sailboat. Cruise the Halifax River/Intracoastal Waterway or the ocean via scenic Ponce Inlet. Take sailing lessons.  Marriages at sea and memorial ash scattering services are offered.">
+    <meta name="google-site-verification" content="i5penMxX6hlT9BwF13lgCUjcu_tLIa0yN8K0ss_xzoI">
+    <title>Sailing Winsome</title>
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
-
     <!-- Custom styles for this template -->
     <link href="css/business-casual.min.css" rel="stylesheet">
-
-  </head>
+</head>
 
   <body>
 
-    <h1 class="site-heading text-center text-white d-none d-lg-block">
-      <span class="site-heading-upper text-primary mb-3">A Free Bootstrap 4 Business Theme</span>
-      <span class="site-heading-lower">Business Casual</span>
-    </h1>
+  
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
       <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
+        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Sailing Winsome</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -47,10 +40,10 @@
               <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="products.html">Products</a>
+                <a class="nav-link text-uppercase text-expanded" href="Rates.html">Rates and Services</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="store.html">Store</a>
+              <a class="nav-link text-uppercase text-expanded" href="contactus.html">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -59,18 +52,38 @@
 
     <section class="page-section about-heading">
       <div class="container">
-        <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/about.jpg" alt="">
+        <img class="img-fluid rounded about-heading-img mb-3 mb-0" src="img/us.jpg" alt="">
         <div class="about-heading-content">
           <div class="row">
             <div class="col-xl-9 col-lg-10 mx-auto">
-              <div class="bg-faded rounded p-5">
-                <h2 class="section-heading mb-4">
-                  <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
-                  <span class="section-heading-lower">About Our Cafe</span>
-                </h2>
-                <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
-                <p class="mb-0">We guarantee that you will fall in <em>lust</em> with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.</p>
-              </div>
+                <div class="bg-faded rounded p-5">
+                    <h2 class="section-heading mb-4">
+                        <span class="section-heading-upper text-center">The Captain</span>
+                        <!--<span class="section-heading-lower">About Our Cafe</span>-->
+                    </h2>
+                    <p>
+                        Captain Hendricks holds a USCG 50 Ton Masters license with commercial towing endorsement and has been sailing since 1969.
+                        Experienced with vessels between 44 and 26 feet, he is a retired US Army Lieutenant Colonel (he started out in the US Marine Corps,
+                        but that's another story). He has a Masters Degree in Management, is a graduate of the US Army Command and General Staff College,
+                        and has additional doctoral related education at the Columbia University. In short, competent and professional.
+                    </p>
+                    <p class="mb-0" style="font-weight:bold">
+                        Professional Captain Services offered include
+                    </p>
+                    <p> • Movement of vessels </p>
+                    <p>• Captained charters on Winsome or other vessels </p>
+                    <p>• Sailing instruction </p>
+                    <p class="mb-0" style="font-weight:bold">
+                        He also loves:
+                    </p>
+                    <p>• Myers's Rum</p>
+                    <p> • Key Lime Pie (the real stuff!)</p>
+                    <p>• Raven's Brew Coffee - "Dead Man's Reach", "Wicked Wolf" blends (Lordy you gotta try this stuff!)</p>
+                    <p>• Jimmy Buffett, good jazz, island music, classic rock, classic R&B</p>
+                    <p>• Classic sailboats</p>
+                    <p>• His crew</p>
+                    <p> • Dogs (salty dogs), cats, birds, hedgehogs, manatees - this list could get long...</p>
+                </div>
             </div>
           </div>
         </div>
