--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Sailing, sailboat charter, sailing charter, sailing lessons, cruise, sail, sailing instruction, captain services, Daytona, Daytona Beach, Daytona Beach sailing, charters, sailboat rental, sailboat charters, Florida, sailing classes, nature cruises, ash scattering, marriage at sea, wedding at sea, dolphins, yachting, Ponce Inlet, Winsome, Pearson Yachts">
     <meta name="description" content="Sailing charters in Daytona on Winsome a classic 36.5 foot sailboat. Cruise the Halifax River/Intracoastal Waterway or the ocean via scenic Ponce Inlet. Take sailing lessons.  Marriages at sea and memorial ash scattering services are offered.">
     <meta name="google-site-verification" content="i5penMxX6hlT9BwF13lgCUjcu_tLIa0yN8K0ss_xzoI">
-    <title>Business Casual - Start Bootstrap Theme</title>
+    <title>Sailing Winsome</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -48,10 +48,10 @@
                           <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
                       </li>
                       <li class="nav-item px-lg-4">
-                          <a class="nav-link text-uppercase text-expanded" href="products.html">Products</a>
+                          <a class="nav-link text-uppercase text-expanded" href="Rates.html">Rates and Services</a>
                       </li>
                       <li class="nav-item px-lg-4">
-                          <a class="nav-link text-uppercase text-expanded" href="store.html">Store</a>
+                          <a class="nav-link text-uppercase text-expanded" href="contactus.html">Contact Us</a>
                       </li>
                   </ul>
               </div>
@@ -83,7 +83,7 @@
                           scattering services are also available.
                       </p>
                       <div class="intro-button mx-auto">
-                          <a class="btn btn-info btn-xl" href="#">Contact Us Today!</a>
+                          <a class="btn btn-info btn-xl" href="contactus.html">Contact Us Today!</a>
                       </div>
                   </div>
               </div>
