--- a/contactus.html
+++ b/contactus.html
@@ -66,9 +66,9 @@
                         </a><br />
                         <span class="section-heading-lower">904-631-7074</span>
                     
-                    <p class="mb-3">
-                       Don't take our word for it, just check out our trip advisor reviews! You are garaunteed to have an amazing time. Give us a call, we look forward to hearing from you!
-                    </p>
+                        <p class="mb-3">
+                            Don't take our word for it, just check out our trip advisor reviews! You are guaranteed to have an amazing time. Give us a call, we look forward to hearing from you!
+                        </p>
                    
                 </div>
             </div>
